<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="displayName"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.home.HomeFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ThemeOverlay.CheeseTodo.Toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/welcome_user_textView"
                style="@style/ThemeOverlay.CheeseTodo.Toobar.TextView"
                android:text="@{displayName != null ? String.format(@string/use_as_a_member, displayName) : @string/use_as_a_non_member}"
                tools:text="어서오세요." />
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/bg_tablayout"
            app:tabIndicatorFullWidth="false"
            app:tabMode="auto"
            app:tabMaxWidth="0dp"
            app:tabGravity="start"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!--
            tabIndicatorFullWidth : tab item 아래 표시줄 넓이를 전체로 할 것인지
            tabMode : 레이아웃의 탭에 대한 동작 모드
            tabGravity : tab item들 정렬 방법 설정
        -->

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/light_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout" />


        <HorizontalScrollView
            android:id="@+id/filter_scrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"
            android:scrollbars="none">
            <!--
            chipSpacingHorizontal, chipSpacingVertical : padding
            singleLine : 한줄로 처리
            singleSelection : 하나만 선택 가능
            checkedChip :
            selectionRequired : 무조건 하나는 선택이 되어야함을 의미
            -->

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/filter_chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                app:chipSpacingHorizontal="4dp"
                app:chipSpacingVertical="6dp"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true"
                app:checkedChip="@id/chip_initialize"
                android:visibility="visible"
                tools:visibility="visible">

                <!--
                    selectionRequired : 그룹 내 모든 자식 Chip이 선택 해제되는 것을 방지할지 여부
                    chipSpacingHorizontal : 그룹 내 Chip 사이 수평 간격
                    chipSpacingVertical : 그룹 내 Chip 사이 수직 간격
                    singleLine : Chip 그룹을 단일 라인 또는 다중 라인인지 여부
                    checkedChip : 기본적으로 체크할 Chip 선택
                -->

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_initialize"
                    style="@style/Widget.CheeseTodo.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initialize"
                    android:textAppearance="@style/Widget.CheeseTodo.ChipTextAppearance"
                    android:visibility="visible" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_low_importance"
                    style="@style/Widget.CheeseTodo.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hight_importance"
                    android:textAppearance="@style/Widget.CheeseTodo.ChipTextAppearance" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_fast_date"
                    style="@style/Widget.CheeseTodo.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fast_date"
                    android:textAppearance="@style/Widget.CheeseTodo.ChipTextAppearance" />

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_scrollView"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_todo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:src="@drawable/ic_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tint="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>