<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="reviewTodoModel"
            type="sang.gondroid.cheesetodo.domain.model.ReviewTodoModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.review.DetailReviewActivity">



            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/commentMotionLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutDescription="@xml/activity_detail_review_xml_commentmotionlayout_scene"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/nestedScrollView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/mainContainerLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.49"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/reviewHorizontalGuideline"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:orientation="horizontal"
                            app:layout_constraintGuide_percent="0.2" />

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/reviewVerticalLeftGuideline"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent="0.05" />

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/reviewVerticalRightGuideline"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent="0.95" />

                        <TextView
                            android:id="@+id/detailReviewTitleTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/bg_round_textview"
                            android:fontFamily="@font/three_dimensional_hatch"
                            android:text="@{reviewTodoModel.title}"
                            android:textSize="22sp"
                            app:layout_constraintBottom_toTopOf="@+id/reviewHorizontalGuideline"
                            app:layout_constraintEnd_toStartOf="@+id/reviewVerticalRightGuideline"
                            app:layout_constraintStart_toStartOf="@+id/reviewVerticalLeftGuideline"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/detailReviewCategory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/category_text"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="@+id/reviewVerticalLeftGuideline"
                            app:layout_constraintTop_toTopOf="@+id/reviewHorizontalGuideline" />

                        <TextView
                            android:id="@+id/detailReviewCategoryTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"
                            android:text="@{reviewTodoModel.category.categoryNameId}"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@+id/detailReviewCategory"
                            app:layout_constraintTop_toTopOf="@+id/reviewHorizontalGuideline"
                            tools:text="Android" />

                        <TextView
                            android:id="@+id/detailReviewPassOrNot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/passCount"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@+id/detailReviewCategoryTextView"
                            app:layout_constraintTop_toTopOf="@+id/reviewHorizontalGuideline" />

                        <TextView
                            android:id="@+id/detailReviewPassCountTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"
                            android:text="@{reviewTodoModel.passOrNot ? @string/review_pass : @string/review_nonpass}"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@+id/detailReviewPassOrNot"
                            app:layout_constraintTop_toTopOf="@+id/reviewHorizontalGuideline"
                            tools:text="2" />


                        <TextView
                            android:id="@+id/detailReviewReadModeTodo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/todo"
                            app:layout_constraintEnd_toStartOf="@+id/reviewVerticalRightGuideline"
                            app:layout_constraintStart_toStartOf="@+id/reviewVerticalLeftGuideline"
                            app:layout_constraintTop_toBottomOf="@+id/detailReviewCategory" />

                        <TextView
                            android:id="@+id/detailReviewTodoTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/bg_square_textview"
                            android:paddingStart="10dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="5dp"
                            android:text="@{reviewTodoModel.todo}"
                            android:textColor="@color/black"
                            app:layout_constraintEnd_toStartOf="@+id/reviewVerticalRightGuideline"
                            app:layout_constraintStart_toStartOf="@+id/reviewVerticalLeftGuideline"
                            app:layout_constraintTop_toBottomOf="@+id/detailReviewReadModeTodo"
                            tools:text="공부하기" />

                        <TextView
                            android:id="@+id/detailReviewDifficult"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/review_difficult"
                            app:layout_constraintEnd_toStartOf="@+id/reviewVerticalRightGuideline"
                            app:layout_constraintStart_toStartOf="@+id/reviewVerticalLeftGuideline"
                            app:layout_constraintTop_toBottomOf="@+id/detailReviewTodoTextView" />

                        <TextView
                            android:id="@+id/detailReviewDifficultTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/bg_square_textview"
                            android:paddingStart="10dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="5dp"
                            android:text="@{reviewTodoModel.difficult}"
                            android:textColor="@color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/reviewVerticalRightGuideline"
                            app:layout_constraintStart_toStartOf="@+id/reviewVerticalLeftGuideline"
                            app:layout_constraintTop_toBottomOf="@+id/detailReviewDifficult"
                            tools:text="어러움" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.core.widget.NestedScrollView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/mainContainerLayout"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:background="@drawable/bg_border"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/commentsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/comments"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/mainContainerLayout"
                    app:layout_constraintTop_toTopOf="@+id/mainContainerLayout" />


                <EditText
                    android:id="@+id/commentValueEditText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:hint="@string/please_enter_comment"
                    android:inputType="none"
                    android:maxLength="500"
                    android:maxLines="5"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/commentSendButton"
                    app:layout_constraintEnd_toEndOf="@+id/mainContainerLayout"
                    app:layout_constraintStart_toStartOf="@+id/mainContainerLayout"
                    app:layout_constraintTop_toBottomOf="@+id/commentsTextView" />

                <Button
                    android:id="@+id/commentSendButton"
                    style="?attr/buttonStyle"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/send"
                    app:layout_constraintBottom_toBottomOf="@+id/mainContainerLayout"
                    app:layout_constraintEnd_toEndOf="@+id/mainContainerLayout"
                    app:layout_constraintTop_toBottomOf="@+id/commentValueEditText" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/commentRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/white"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:padding="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mainContainerLayout" />

            </androidx.constraintlayout.motion.widget.MotionLayout>


    </FrameLayout>

</layout>

